# nibegw-rp

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  network.rs  reader.rs  serial.rs  wifi.rs
test-data/: send-test-data.sh
